@@ -178,7 +178,7 @@ public final class FieldInfos implements Iterable<FieldInfo> {
     return fis;
   }
 
-  /** Returns true if any fields do not positions */
+  /** Returns true if any fields have positions */
   public boolean hasProx() {
     if (isReadOnly()) {
       return hasProx;
@@ -349,6 +349,12 @@ public final class FieldInfos implements Iterable<FieldInfo> {
     return fi;
   }
 
+  /**
+   * lookup the number of a field by name.
+   * 
+   * @param fieldName field's name
+   * @return number of field, or -1 if it does not exist.
+   */
   public int fieldNumber(String fieldName) {
     FieldInfo fi = fieldInfo(fieldName);
     return (fi != null) ? fi.number : -1;
@@ -384,11 +390,17 @@ public final class FieldInfos implements Iterable<FieldInfo> {
     return byNumber.values().iterator();
   }
 
+  /**
+   * @return number of fields
+   */
   public int size() {
     assert byNumber.size() == byName.size();
     return byNumber.size();
   }
 
+  /**
+   * @return true if at least one field has any vectors
+   */
   public boolean hasVectors() {
     if (isReadOnly()) {
       return hasVectors;
@@ -402,9 +414,12 @@ public final class FieldInfos implements Iterable<FieldInfo> {
     return false;
   }
 
+  /**
+   * @return true if at least one field has any norms
+   */
   public boolean hasNorms() {
     for (FieldInfo fi : this) {
-      if (fi.normsPresent()) {
+      if (fi.hasNorms()) {
         return true;
       }
     }
@@ -441,7 +456,10 @@ public final class FieldInfos implements Iterable<FieldInfo> {
     return roFis;
   }
 
-  public boolean anyDocValuesFields() {
+  /**
+   * @return true if at least one field has docValues
+   */
+  public boolean hasDocValues() {
     for (FieldInfo fi : this) {
       if (fi.hasDocValues()) { 
         return true;
